# gh-workflow-testing

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: clone-to-prod.yaml  prod-update.yaml  test-request.yaml
.github/workflows/: cleanup-merged-branches.yaml  increment-dev-version.yml  issueops-clone-to-prod.yaml  issueops-prod-update.yaml  issueops-test-request.yaml.yml  on-merge-release-pr.yml  publish-artifact.yml  status-check.yml  trigger-release.yml
.github/workflows/scripts/: semver.sh
